clock & mini math game

--- a/clock/clock.html
+++ b/clock/clock.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="mostOuter">
-        <h3>digital clock</h3>
+        <h3>Govardhan clock</h3>
         <div class="clock">
             <div class="divisions">
                 <div class="hours">
