start of protfolio 1

--- a/navbar/index.html
+++ b/navbar/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="content">
-        MY content
+        <h4> Please  Reduce window size to see effects</h4>
     </div>
 <script src="index.js"></script>
 </body>
