--- a/protfolio 1/index.html
+++ b/protfolio 1/index.html
@@ -12,8 +12,9 @@
         <div class="container">
             <nav class="nav-bar">
                 <div class="logo"><img src="images/logo.png" alt="logo"></div>
-                <div class="menu">
+                <div class="menu " id="menu">
                     <ul>
+                        <li class="close" id="close">X</li>
                         <li><a href="" class="Home">Home</a></li>
                         <li><a href="" class="About">About</a></li>
                         <li><a href="" class="Services">Services</a></li>
@@ -21,8 +22,15 @@
                         <li><a href="" class="Contact">Contact</a></li>
                     </ul>
                 </div>
+                <div class="hamburger" id="hamburger">
+                        <div class="line">___</div>
+                        <div class="line">__</div>
+                        <div class="line">___</div>
+                        <div class="line">__</div>
+                </div>
             </nav>
         </div>
     </header>
+    <script src="index.js"></script>
 </body>
 </html>
