--- a/protfolio 1/index.html
+++ b/protfolio 1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -23,14 +25,38 @@
                     </ul>
                 </div>
                 <div class="hamburger" id="hamburger">
-                        <div class="line">___</div>
-                        <div class="line">__</div>
-                        <div class="line">___</div>
-                        <div class="line">__</div>
+                    <div class="line">___</div>
+                    <div class="line">__</div>
+                    <div class="line">___</div>
+                    <div class="line">__</div>
                 </div>
             </nav>
         </div>
+        <div class="intro">
+            <p>UI/UX Designer</p>
+            <span> Hi, I'm </span>
+            <span id="name">Kevin</span>
+            <br>
+            <span>Jen from Australia</span>
+
+        </div>
     </header>
+
+    <div id="about" class="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/user.png" alt="">
+                </div>
+                <div class="about-col-2">
+                    <h1>About Me</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+   
     <script src="index.js"></script>
 </body>
+
 </html>
