--- a/rough-work/index.html
+++ b/rough-work/index.html
@@ -1,16 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-</head>
-<body>
 
-    <div class="spam"> Uderline</div>
-    
-<script src="index.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family=Roboto:wght@300&family=Source+Sans+Pro:ital,wght@1,200&display=swap"
+        rel="stylesheet">
+
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <nav class="nav-bar">
+                <div class="logo"><img src="images/logo.png" alt="logo"></div>
+                <div class="menu " id="menu">
+                    <ul>
+                        <li class="close" id="close">X</li>
+                        <li><a href="" class="Home">Home</a></li>
+                        <li><a href="" class="About">About</a></li>
+                        <li><a href="" class="Services">Services</a></li>
+                        <li><a href="" class="Protfolio">Protfolio</a></li>
+                        <li><a href="" class="Contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="hamburger" id="hamburger">
+                    <div class="line">___</div>
+                    <div class="line">__</div>
+                    <div class="line">___</div>
+                    <div class="line">__</div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <div class="introduction">
+        <p>UI/UX Designer</p>
+        <span> Hi, I'm </span>
+        <span id="name">Kevin</span>
+        <br>
+        <span>Jen from Australia</span>
+    </div>
+    <div class="about">
+        <div class="about-me">
+            <div class="my-img">
+                <img src="images/user.png" alt="">
+            </div>
+            <div class="aboutme-text">
+                <span class="aboutme-title">About Me</span>
+                <p class="aboutme-content">orem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book. It has survived not
+                    only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.</p>
+
+                <nav class="info-title-nav">
+                    <div class="info-title-container">
+                        <ul>
+                            <li><span class="info-title" id="skill">Skills</span></li>
+                            <li><span class="info-title" id="exp">Experience</span></li>
+                            <li><span class="info-title"id="edu">Education</span></li>
+                        </ul>
+                    </div>
+
+                </nav>
+                <div class="info-sect">
+                    <div class="skills display" id="skills">
+                        <p>Skill 1</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+                        <br>
+                        <br>
+                        <p>Skill 2</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+                        <br>
+                        <br>
+                        <p>Skill 1</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+
+                    </div>
+                    <div class="Experience display" id="experience">
+                        <p>Experience 1</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+                        <br>
+                        <br>
+                        <p>Experience 2</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+                        <br>
+                        <br>
+                        <p>Experience 1</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+
+                    </div>
+
+                    <div class="Education display" id="education">
+                        <p>Education 1</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+                        <br>
+                        <br>
+                        <p>Education 2</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+                        <br>
+                        <br>
+                        <p>Skill 1</p>
+                        <span> This is my skill 1 <br> I am learning html css js</span>
+
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+
+
+    </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
