protfolio1 Services section

--- a/rough-work/index.html
+++ b/rough-work/index.html
@@ -12,11 +12,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family=Roboto:wght@300&family=Source+Sans+Pro:ital,wght@1,200&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5b7ca4e75c.js" crossorigin="anonymous"></script>
+
 
     <title>Document</title>
 </head>
 
 <body>
+    <!-- =================================================  Header  ====================================> -->
+
     <header>
         <div class="container">
             <nav class="nav-bar">
@@ -47,6 +52,7 @@
         <br>
         <span>Jen from Australia</span>
     </div>
+    <!-- =================================================  About ====================================> -->
     <div class="about">
         <div class="about-me">
             <div class="my-img">
@@ -58,16 +64,14 @@
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                     printer took a galley of type and scrambled it to make a type specimen book. It has survived not
                     only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                    Ipsum.</p>
+                </p>
 
                 <nav class="info-title-nav">
                     <div class="info-title-container">
                         <ul>
                             <li><span class="info-title" id="skill">Skills</span></li>
                             <li><span class="info-title" id="exp">Experience</span></li>
-                            <li><span class="info-title"id="edu">Education</span></li>
+                            <li><span class="info-title" id="edu">Education</span></li>
                         </ul>
                     </div>
 
@@ -111,17 +115,74 @@
                         <br>
                         <p>Skill 1</p>
                         <span> This is my skill 1 <br> I am learning html css js</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- ===========================================  Services ============================================> -->
+    <div id="Myservices" class="Myservices">
+        <div class="container">
+            <div class="content">
+                <span class="aboutme-title" id="my-service-title">My Services</span><br>
+                <div class="Services">
+                    <div class=" grid web">
+
+                        <i class="fa-sharp fa-solid fa-code fa-2x"></i>
+
+                        <span>Web Design</span>
+                        <div class="content">
+                            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                            </p>
+
+                        </div>
+                        <h5> Learn More</h5>
+
+
+                    </div>
+                    <div class=" grid ui">
+                        <i class="fa-solid fa-crop-simple fa-2x"></i>
+
+                        <span>Web Design</span>
+                        <div class="content">
+                            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                            </p>
+
+                        </div>
+                        <h5> Learn More</h5>
+
+                    </div>
+                    <div class=" grid app">
+                        <i class="fa-brands fa-app-store fa-2x"></i>
+
+                        <span>Web Design</span>
+                        <div class="content">
+                            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                            </p>
+
+                        </div>
+                        <h5> Learn More</h5>
 
                     </div>
                 </div>
-
-
             </div>
         </div>
 
-
-
     </div>
+    <!-- ============================ My Work ==================================================================================> -->
+
+    <div id="Myservices" class="MyServices">
+        <div class="container">
+            <div class="content">
+                <span class="aboutme-title" id="my-work-title">My Work</span><br>
+
+            </div>
+        </div>
+    </div>
+
+
     <script src="index.js"></script>
 </body>
 
