--- a/rough-work/index.html
+++ b/rough-work/index.html
@@ -30,7 +30,7 @@
                     <ul>
                         <li class="close" id="close">X</li>
                         <li><a href="" class="Home">Home</a></li>
-                        <li><a href="" class="About">About</a></li>
+                        <li><a href="#about" class="About">About</a></li>
                         <li><a href="" class="Services">Services</a></li>
                         <li><a href="" class="Protfolio">Protfolio</a></li>
                         <li><a href="" class="Contact">Contact</a></li>
@@ -53,7 +53,7 @@
         <span>Jen from Australia</span>
     </div>
     <!-- =================================================  About ====================================> -->
-    <div class="about">
+    <div class="about" id="about">
         <div class="about-me">
             <div class="my-img">
                 <img src="images/user.png" alt="">
@@ -173,16 +173,90 @@
     </div>
     <!-- ============================ My Work ==================================================================================> -->
 
-    <div id="Myservices" class="MyServices">
+    <div id="Mywork" class="Mywork">
         <div class="container">
             <div class="content">
-                <span class="aboutme-title" id="my-work-title">My Work</span><br>
+                <span class="aboutme-title" id="my-service-title">My Work</span><br>
 
+                <div class="Services">
+
+                    <div class=" grid work-1" id="work-1">
+                        <div><img src="images/work-1.png" alt="work-1">
+                            <div class=" work-link-1" id="workd1">
+                                <h4>Social Media App</h4>
+                                <br>
+                                <p>
+                                    The app connects you yo the talented<br>
+                                    people around the world<br> .Download it form play store
+                                </p>
+                                <a href="#">
+                                    <div id="circle">
+                                        <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" grid work-2" id="work-2">
+                        <div> <img src="images/work-2.png" alt="work-2">
+                            <div class=" work-link-1" id="workd2">
+                                <h4>Social Media App</h4>
+                                <br>
+                                <p>
+                                    The app connects you yo the talented<br>
+                                    people around the world<br> .Download it form play store
+                                </p>
+                                <a href="#">
+                                    <div id="circle">
+                                        <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" grid work-3" id="work-3">
+                        <div>
+                            <img src="images/work-3.png" alt="">
+                            <div class=" work-link-1" id="workd3">
+                                <h4>Social Media App</h4>
+                                <br>
+                                <p>
+                                    The app connects you yo the talented<br>
+                                    people around the world<br> .Download it form play store
+                                </p>
+                                <a href="#">
+                                    <div id="circle">
+                                        <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <button id="work-btn1"> see more</button>
         </div>
     </div>
 
+    <!-- ================================  Contact me =============================================================> -->
+    <div id="contact">
+        <div class="container">
+            <div class="content" >
+                <div class="contact-side">
+                    <span class="aboutme-title">Contact Me</span><br><br>
+                    <div class="mail-div">
+                        
+                    </div>
+                    <div class="phone-no-div"></div>
+                    <div class="social-media"></div>
+                    <div class="download" id="download"></div>
 
+                </div>
+                <div class="form-side"></div>
+            </div>
+        </div>
+
+    </div>
     <script src="index.js"></script>
 </body>
 
